# smolotchi

./: .env.example  .gitignore  AGENTS.md  MANIFEST.in  README.md  ROADMAP.md  config.toml  next-steps.md  pyproject.toml  reports.md  theme.json
.github/workflows/: ci.yml  docs-pages.yml  docs.yml
contrib/systemd/: smolotchi-core.service  smolotchi-display.service  smolotchi-displayd.service
docs-site/: docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.js  sidebars.ts
docs-site/docs/: glossary.md  index.md
docs-site/scripts/: check_mdx_safety.mjs  validate-sidebars.mjs
packaging/systemd/: smolotchi-ai-worker.service  smolotchi-ai.service  smolotchi-core-net.service  smolotchi-core.service  smolotchi-display.service  smolotchi-prune.service  smolotchi-prune.timer  smolotchi-web.service
requirements/: base.txt  pi_zero.txt
schemas/: host_summary.json
scripts/: dev_run.sh  smoke_ai_run.sh
scripts/code_audit/: README.md  generate_roadmap.py  scan_complexity.py  scan_docs.py  scan_docstrings.py  scan_tests.py  scan_todos.py
scripts/docs_extract/: config_reference.py  http_api.py  symbol_index.py
scripts/pi_zero/: README.md  bootstrap.sh  bootstrap_pi_zero.sh  install.sh  install_smolotchi.sh  install_systemd.sh
smolotchi/: __init__.py  cli.py  cli_artifacts.py  cli_locks.py  cli_profiles.py  test_cli_install_systemd.py
smolotchi/actions/: __init__.py  cache.py  execution.py  fingerprint.py  parse.py  parse_services.py  plan_runner.py  registry.py  runner.py  schema.py  summary.py  test_plan_runner.py  throttle.py
smolotchi/ai/: __init__.py  errors.py  replay.py  test_worker.py  worker.py
smolotchi/api/: conftest.py  health.py  test_templates_smoke.py  test_web_wifi_smoke.py  theme.py  view_models.py  web.py
smolotchi/core/: __init__.py  app_state.py  artifacts.py  artifacts_gc.py  bus.py  config.py  db.py  dossier.py  engines.py  jobs.py  lan_resolver.py  lan_state.py  locks.py  migrations.py  normalize.py  paths.py  policy.py  presets.py  reports.py  resources.py  sqlite.py  (+13 more)
(+125 files in other folders)
