[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smolotchi"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.3",
    "jinja2>=3.1",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "tomli; python_version < '3.11'",
]

[project.scripts]
smolotchi = "smolotchi.cli:main"
smo = "smolotchi.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = { find = { include = ["smolotchi*"] } }
